<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.tutoriales.TutorialesFragment"
    android:background="@color/fondo">

    <ImageView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="0dp"
        android:contentDescription="TODO"
        android:src="@drawable/bannertuto" />


    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/text_home"
        android:layout_marginTop="0dp"
        android:padding="4dp"
        android:columnCount="1"
        android:rowCount="4"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardtuto1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/fondo_app"
            android:foreground="?selectableItemBackground"
            app:cardBackgroundColor="#ffd6bb"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tuto1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/tuto1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_tuto1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/titulo_tuto1"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/des_tuto1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descripcion_skin1"
                        android:layout_marginBottom="15dp"
                        android:layout_marginRight="10dp"
                        />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardtuto2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/fondo_app"
            android:foreground="?selectableItemBackground"
            app:cardBackgroundColor="#ffd6bb"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            tools:ignore="GridLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tuto2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/tuto2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_tuto2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/titulo_tuto2"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/des_tuto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descripcion_tuto2"
                        android:layout_marginBottom="15dp"
                        android:layout_marginRight="10dp"
                        />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardtuto3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/fondo_app"
            android:foreground="?selectableItemBackground"
            app:cardBackgroundColor="#ffd6bb"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            tools:ignore="GridLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tuto3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/tuto3" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_tuto3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/titulo_tuto3"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/des_base"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descripcion_tuto3"
                        android:layout_marginBottom="15dp"
                        android:layout_marginRight="10dp"
                        />


                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>




    </GridLayout>






</RelativeLayout>